Bug 417267 - If 'Scan for new music at startup' is checked in Elisa settings, tracks stored in a ntfs partition non-indexed by baloo disappear from the music collection after manual scanning and after adding/removing a folder in Elisa settings
Summary: If 'Scan for new music at startup' is checked in Elisa settings, tracks store...
Status: RESOLVED FIXED
Alias: None
Product: Elisa
Classification: Applications
Component: general (other bugs)
Version First Reported In: 22.08.1
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Matthieu Gallien
URL:
Keywords:
: 438061 450802 (view as bug list)
Depends on:
Blocks:
 
Reported: 2020-02-07 13:22 UTC by Patrick Silva
Modified: 2023-02-07 16:59 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 22.12.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2020-02-07 13:22:20 UTC
STEPS TO REPRODUCE
1. add a non-indexed by baloo path to elisa settings (I added a folder located in a NTFS partition)
2. open Elisa
3. wait auto-refresh to finish
4. click on hamburger menu > refresh music collection

OBSERVED RESULT
music collection is empty. Album, artists, tracks and genres views show nothing.
Restart elisa makes all music to re-appear in my music collection.

EXPECTED RESULT
music collection should not be emptied after manual refreshing

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 5.17.90
KDE Frameworks Version: 5.66.0
Qt Version: 5.14.1

ADDITIONAL INFORMATION
tracks from /home/username/music indexed by baloo do not disappear from music collection
after manual refreshing.
Comment 1 Matthieu Gallien 2020-02-07 20:42:24 UTC
Thanks for the report. I will have a look in some days.
Comment 2 Patrick Silva 2021-06-05 01:58:10 UTC
*** Bug 438061 has been marked as a duplicate of this bug. ***
Comment 3 Patrick Silva 2021-09-19 18:51:52 UTC
This bug persists with Elisa 21.08.1, despite now I can't reproduce consistently.
Comment 4 Patrick Silva 2022-09-20 15:25:44 UTC
Tracks from folders located in a ntfs partition disappear from my library when I do manual scanning.
Tracks from Music folder in my Home (ext4) are not affected.

SOFTWARE/OS VERSIONS
Operating System: Arch Linux
KDE Plasma Version: 5.25.90
KDE Frameworks Version: 5.98.0
Qt Version: 5.15.6
Graphics Platform: Wayland
Comment 5 Patrick Silva 2022-09-20 15:55:35 UTC
*** Bug 450802 has been marked as a duplicate of this bug. ***
Comment 6 Bug Janitor Service 2023-02-07 00:38:44 UTC
A possibly relevant merge request was started @ https://invent.kde.org/multimedia/elisa/-/merge_requests/417
Comment 7 Nate Graham 2023-02-07 16:58:28 UTC
Git commit 23cb288389a4428aec3cefe822a5d914e07c25d6 by Nate Graham, on behalf of Nikita Karpei.
Committed on 07/02/2023 at 16:40.
Pushed by ngraham into branch 'master'.

Fix empty music collection after rescan if baloo isn't available

M  +0    -6    src/abstractfile/abstractfilelisting.cpp

https://invent.kde.org/multimedia/elisa/commit/23cb288389a4428aec3cefe822a5d914e07c25d6
Comment 8 Nate Graham 2023-02-07 16:58:51 UTC
Git commit c89ff103d04e7245809a7c2a5ccc7988cb79d092 by Nate Graham, on behalf of Nikita Karpei.
Committed on 07/02/2023 at 16:58.
Pushed by ngraham into branch 'release/22.12'.

Fix empty music collection after rescan if baloo isn't available


(cherry picked from commit 23cb288389a4428aec3cefe822a5d914e07c25d6)

M  +0    -6    src/abstractfile/abstractfilelisting.cpp

https://invent.kde.org/multimedia/elisa/commit/c89ff103d04e7245809a7c2a5ccc7988cb79d092