Fix empty music collection after rescan if baloo isn't available

BUG: 417267


(cherry picked from commit 23cb288389a4428aec3cefe822a5d914e07c25d6)